--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,32 @@
 @import "tailwindcss";
+
+@keyframes typing {
+  from {
+    width: 0;
+    max-width: 0;
+  }
+  to {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgb(34, 211, 238);
+  }
+}
+
+.typewriter-text {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid rgb(34, 211, 238);
+  width: 0;
+  animation:
+    typing 3.5s steps(40, end) forwards,
+    blink-caret 0.75s step-end infinite;
+}
